# SarenDB

./: .gitignore  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 73ce6167c75b_init.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/models/: __init__.py  user.py
frontend/: Dockerfile  eslint.config.js  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
